# portion-mate

./: .gitattributes  .gitignore  README.md  app.config.js  asset-manifest.json  index.html  manifest.json  mkdocs.yml  package.json  pyproject.toml  run.py  timelog.md
docs/: .eslintrc.js  .gitignore  .wikignore  Development.md  Ethics Checklist.md  FAQ.md  GetStarted.md  Home.md  Terms.md  _Footer.md  _Sidebar.md  gitlog.sh  index.md  log_parser.py  package.json  pyproject.toml  requirements.txt  tsconfig.eslint.json  tsconfig.json
docs/archive/: Research.md
docs/assets/: entityrelation.xml
docs/important/: Ethics Checklist.md  status.tex
docs/meetings/: 2021-10-01.json  2021-10-01.md  2021-10-08.json  2021-10-08.md  2021-10-15.json  2021-10-15.md  2021-10-22.json  2021-10-22.md  2021-10-29.json  2021-10-29.md  2021-11-05.md  2021-11-12.json  2021-11-12.md  2021-11-19.json  2021-11-19.md  2021-11-26.json  2021-11-26.md  2021-12-03.md  2021-12-10.json  2021-12-17.json  2021-12-17.md  2022-01-14.json  2022-01-21.json  2022-01-28.json  2022-02-04.json  2022-02-11.json  2022-02-25.json  2022-03-04.json  2022-03-16.json  2022-03-23.json  generate.ts  meetings.t.md
docs/navigation/: Home.md  Journal.md  Resources.md  Stats.md
docs/specifications/: Requirements.md  Users.md  Wireframes.md
docs/specs/: requirements.md  users.md
docs/survey/: analyser.py  index.md  responses.csv
src/: .env.example  .eslintrc.js  .gitignore  App.test.tsx  App.tsx  README.md  app.json  babel.config.js  manage.py  manual.md  metro.config.js  package.json  pyproject.toml  set-env.js  tsconfig.json  webpack.config.js
src/app/api/: auth.ts  index.ts  items.ts  journals.ts  logs.ts  resources.ts  store.ts  user.ts
src/app/assets/: mapping.json  theme.json
src/app/components/: AppIcons.tsx  EditScreenInfo.tsx  StyledText.tsx  Themed.tsx
src/app/components/FAB/: ActionItem.tsx  MainButton.tsx  index.ts
src/app/components/__tests__/: StyledText-test.js
src/app/constants/: Colors.ts  Styles.ts  helpers.tsx
src/app/constants/Styles/: display.ts  flex.ts  index.ts  (+1 more)
src/app/contexts/: App.tsx  AppContext.tsx  Auth.tsx  Items.tsx  ThemeContext.tsx  User.tsx  index.tsx
src/app/hooks/: useCachedResources.ts  useColorScheme.ts
src/app/navigation/: ActionNavigator.tsx  AuthNavigator.tsx  BottomTabNavigator.tsx  LinkingConfiguration.ts  RootNavigator.tsx  StackNavigator.tsx  index.tsx
src/app/screens/: HomePage.tsx  JournalPage.tsx  ModalScreen.tsx  NotFoundScreen.tsx  ResourcesPage.tsx  SettingsPage.tsx  StatsPage.tsx
src/app/types/: FAB.ts  api.ts  env.d.ts  index.ts  navigation.ts  styles.ts
src/backend/: .env.example  .gitignore  manage.py  pyproject.toml  requirements.txt
src/backend/main/: admin.py  apps.py  models.py  signals.py  views.py
src/backend/portion_mate/: asgi.py  settings.py  urls.py  wsgi.py
src/backend/portionmate/: asgi.py  settings.py  urls.py  wsgi.py
src/backend/rest/: serializers.py  urls.py  views.py
src/frontend/: .env.example  .eslintrc.js  .gitignore  App.tsx  app.json  babel.config.js  package.json  tsconfig.json  types.tsx
src/frontend/api/: auth.ts  index.ts  store.ts  types.ts
src/frontend/components/: EditScreenInfo.tsx  IconButtonGroup.tsx
src/frontend/contexts/: Auth.tsx
src/frontend/navigation/: AuthNavigator.tsx  BottomTabNavigator.tsx  LinkingConfiguration.ts  RootNavigator.tsx  StackNavigator.tsx  index.tsx
src/frontend/screens/: HomePage.tsx  NotFoundScreen.tsx  ResourcesPage.tsx  TabOneScreen.tsx
src/server/auth/: apps.py  models.py  signals.py
src/server/graph/: apps.py  schema.py  urls.py  views.py
src/server/main/: admin.py  apps.py  models.py  signals.py  tests.py  urls.py
src/server/mate/: admin.py  apps.py  views.py
src/server/rest/: apps.py  filters.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
src/server/server/: asgi.py  settings.py  urls.py  wsgi.py
(+102 files in other folders)
