[tool.poetry]
name = "portion-mate-docs"
version = "1.0.0"
description = ""
authors = []
packages = [
    { include = "meetings/**/*.ts" },
]

[tool.poetry.dependencies]
python = "^3.6"
mkdocs = "^1.2.3"
mkdocs-material = "^7.3.4"
mkdocs-material-extensions = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
