[tool.poetry]
name = "portion-mate-docs"
version = "1.0.0"
description = ""
authors = []
packages = [
    { include = "meetings/**/*.ts" },
]

[tool.poetry.dependencies]
# Commented out to suppress libraries.io warnings
# Uncomment when working on dependencies
# python = "^3.6"

mkdocs = "^1.2.3"
mkdocs-material = "^8.2.1"
mkdocs-material-extensions = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
